# jj-hunk-tool

./: Cargo.toml  README.md  build.rs
skills/jj-subagent-workspaces/: SKILL.md
skills/jj-surgeon/: SKILL.md
skills/jj-surgeon/references/: git-interop.md  revset-reference.md  workspaces.md
src/: diff.rs  hunk_id.rs  main.rs  patch.rs  tool.rs
tests/: integration.rs
