[package]
name = "jj-hunk-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.15"
git-surgeon = { git = "https://github.com/mvzink/git-surgeon.git", branch = "lib" }
dialoguer = "0.11"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tempfile = "3"
